[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scaffold.gd" type="Script" id=1]
[ext_resource path="res://assets/ssck/Orange (28).png" type="Texture" id=2]

[node name="Scaffold" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="WingLJoint" type="Node2D" parent="."]
position = Vector2( -32.3333, -54.6667 )

[node name="WingRJoint" type="Node2D" parent="."]
position = Vector2( 32.3333, -55.1111 )

[node name="EngineLJoint" type="Node2D" parent="."]
position = Vector2( -44.8889, 29.3333 )

[node name="EngineRJoint" type="Node2D" parent="."]
position = Vector2( 45.3333, 28.8889 )
